[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-stealth"
version = "0.2.2"
description = "Stealthy Crawling. Maximum Results. A pluggable anti-bot and stealth framework for Scrapy."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Fawad Ali", email = "fawadstar6@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "wreq>=0.11.2",
]

keywords = [
    "scrapy",
    "scrapy middleware",
    "web scraping",
    "stealth",
    "stealth crawler",
    "anti-bot",
    "anti-detection",
    "crawler",
    "spider",
    "browser fingerprint",
    "proxy rotation",
    "fingerprint",
    "cloudflare bypass",
    "http2",
    "tls fingerprint",
    "headless browser",
    "bot detection bypass",
    "rate limit bypass",
    "scraping framework",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/fawadss1/scrapy-stealth"
Repository = "https://github.com/fawadss1/scrapy-stealth"
Issues = "https://github.com/fawadss1/scrapy-stealth/issues"
Changelog = "https://github.com/fawadss1/scrapy-stealth/releases"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", ".venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
